--- a/model.Rmd
+++ b/model.Rmd
@@ -66,6 +66,11 @@ cat("AIC", model1$AIC)
 cat("BIC", model1$BIC)
 cat("AICc", model1$AICc)
 ```
+```{r}
+model1.pacf=ARMAacf(ar=c(-0.1087), ma=c(-0.9488), lag.max = 20, pacf=TRUE)
+pacf(as.vector(second_diff), lag.max=20)
+points(0:19, model1.pacf, col='red')
+```
 
 
 ```{r}
